# links

./: .gitattributes  .gitignore  AGENTS.md  CHROME_STORE_LISTING.md  DEBUG.md  E2E_TEST_CHECKLIST.md  README.md  REFACTOR_E2E_CHECKLIST.md  TODO.md  USER_GUIDE.md  bookmarks_2026_4_28.html  generate-icons.py  index.html  package-lock.json  package.json  quick-add.html  spotlight.html  vite.config.js
.github/workflows/: release.yml
browser-extension/: background.js  manifest.json
src/: AGENTS.md  App.svelte  app.css  quick-add.js  spotlight.js
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  commands.rs  config.rs  db.rs  fetcher.rs  http_server.rs  lib.rs  normalize.rs
src-tauri/src/db/: error.rs  export.rs  migration.rs  mod.rs  models.rs  repository.rs  row_mapping.rs  search.rs  tests.rs
src/lib/: api.js  ready.js
src/lib/components/: AGENTS.md  CategoryInput.svelte  CloseDialog.svelte  ExportDialog.svelte  LinkCard.svelte  LinkForm.svelte  LinkList.svelte  ReleaseNotesDialog.svelte  SearchBar.svelte  SettingsDialog.svelte  ShortcutEditor.svelte  Sidebar.svelte  SortSelect.svelte  StatsPanel.svelte  TagInput.svelte  (+1 more)
src/pages/: QuickAdd.svelte  Spotlight.svelte
test-data/: 01-small-bookmarks-10.html  02-medium-bookmarks-100.html  03-json-new-format.json  04-json-old-format-bare-array.json  05-bookmarks-duplicates.html  06-large-bookmarks-200.html  07-json-with-tags-nesting.json  08-json-duplicates.json  09-bookmarks-non-http-filter.html
(+12 files in other folders)
